--- a/_posts/2025-09-23-template.markdown
+++ b/_posts/2025-09-23-template.markdown
@@ -3,7 +3,7 @@ layout: article
 title: "日誌模板"
 date: 2025-09-23 18:20:00 +0800
 modify_date: 2025-09-23 19:15:00 +0800
-category: log
+category: template
 lightbox: true
 ---
 
